fix: Add title field to configuration.mdx to resolve duplicate 'Configuration' in nav

--- a/configuration.mdx
+++ b/configuration.mdx
@@ -1,8 +1,9 @@
 ---
+title: Configuration Overview
 description: Overview of VectorLint configuration options.
 ---
 
-# Configuration
+# Configuration Overview
 
 VectorLint uses a hierarchical configuration system that lets you control behavior at different levels.
 
